// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: 500;
  border-radius: 24px;
  border-style: solid;
  border-width: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  touch-action: manipulation;
  outline: none;
  padding-right: 24px;
  padding-left: 24px;
  margin-right: -24px;
  background-color: #45d6b5;
  color: #fff;
  border-color: #fff;
}

.emotion-3.emotion-3 {
  z-index: 3;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: 500;
  border-radius: 24px;
  border-style: solid;
  border-width: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  touch-action: manipulation;
  outline: none;
  padding-right: 24px;
  padding-left: 48px;
  margin-left: -24px;
  margin-right: -24px;
  background-color: #4f0599;
  color: #fff;
  border-color: #fff;
}

.emotion-5.emotion-5 {
  z-index: 2;
}

.emotion-5:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: 500;
  border-radius: 24px;
  border-style: solid;
  border-width: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  touch-action: manipulation;
  outline: none;
  padding-right: 24px;
  padding-left: 48px;
  margin-left: -24px;
  background-color: #fff;
  color: #b2b6c3;
  border-color: #d4dae7;
}

.emotion-7.emotion-7 {
  z-index: 1;
}

.emotion-7:focus {
  box-shadow: 0 0 0 2px rgba(178,182,195,0.25);
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      Step 1
    </div>
    <div
      class="emotion-2 emotion-5"
    >
      Step 2
    </div>
    <div
      class="emotion-2 emotion-7"
    >
      Step 3
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress renders correctly when one children is clickable 1`] = `
<DocumentFragment>
  .emotion-1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: 500;
  border-radius: 24px;
  border-style: solid;
  border-width: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  touch-action: manipulation;
  outline: none;
  padding-right: 24px;
  padding-left: 24px;
  margin-right: -24px;
  background-color: #45d6b5;
  color: #fff;
  border-color: #fff;
  cursor: pointer;
}

.emotion-3.emotion-3 {
  z-index: 3;
}

.emotion-3:focus {
  box-shadow: 0 0 0 2px rgba(69,214,181,0.25);
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: 500;
  border-radius: 24px;
  border-style: solid;
  border-width: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  touch-action: manipulation;
  outline: none;
  padding-right: 24px;
  padding-left: 48px;
  margin-left: -24px;
  margin-right: -24px;
  background-color: #45d6b5;
  color: #fff;
  border-color: #fff;
}

.emotion-5.emotion-5 {
  z-index: 2;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: 500;
  border-radius: 24px;
  border-style: solid;
  border-width: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  touch-action: manipulation;
  outline: none;
  padding-right: 24px;
  padding-left: 48px;
  margin-left: -24px;
  background-color: #4f0599;
  color: #fff;
  border-color: #fff;
}

.emotion-7.emotion-7 {
  z-index: 1;
}

.emotion-7:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

<div
    class="emotion-0 emotion-1"
  >
    <button
      class="emotion-2 emotion-3"
    >
      Step 1
    </button>
    <div
      class="emotion-2 emotion-5"
    >
      Step 2
    </div>
    <div
      class="emotion-2 emotion-7"
    >
      Step 3
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress renders correctly when one children is empty 1`] = `
<DocumentFragment>
  .emotion-1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: 500;
  border-radius: 24px;
  border-style: solid;
  border-width: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  touch-action: manipulation;
  outline: none;
  padding-right: 24px;
  padding-left: 24px;
  margin-right: -24px;
  background-color: #45d6b5;
  color: #fff;
  border-color: #fff;
}

.emotion-3.emotion-3 {
  z-index: 2;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: 500;
  border-radius: 24px;
  border-style: solid;
  border-width: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  touch-action: manipulation;
  outline: none;
  padding-right: 24px;
  padding-left: 48px;
  margin-left: -24px;
  background-color: #4f0599;
  color: #fff;
  border-color: #fff;
}

.emotion-5.emotion-5 {
  z-index: 1;
}

.emotion-5:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      Step 1
    </div>
    <div
      class="emotion-2 emotion-5"
    >
      Step 3
    </div>
  </div>
</DocumentFragment>
`;
